# kargin_project

./: .env.example  .gitignore  CLAUDE.md  Home.py  LEARNINGS.md  NOTES.md  OPTIONAL_PYTUBEFIX_README.md  PLAN.md  PROGRESS.md  README.md  TELEGRAM_BOT_README.md  kargin_eng.csv  pyproject.toml  requirements.txt  run_telegram_bot.bat  setup_and_run_bot.bat  test_without_pytubefix.py  youtube_utils.py
.claude/: settings.json
.github/workflows/: deploy.yml
data/: youtube_metadata.csv
data/transcripts/: 001_Kargin_Haghordum_sketch_275_Hayko_Mko_5h70tn0asdo.ro.json  004_Kargin_Haghordum_sketch_278_Hayko_Mko_-paMG4kj9gg.tr.json  007_Kargin_Haghordum_sketch_281_Hayko_Mko_2nLtQ6V0QZw.tr.json  015_Kargin_Haghordum_sketch_322_Hayko_Mko_54CspqHsW2s.hi.json  019_Kargin_Haghordum_sketch_326_Hayko_Mko_z3FMKrxzWhc.hy.json  020_Kargin_Haghordum_sketch_327_Hayko_Mko_o4r6M4zxoUo.hy.json  021_Kargin_Haghordum_sketch_328_Hayko_Mko_7rP-ITVzPOQ.ro.json  025_Kargin_Haghordum_-_Jorik_Hayko_Mko_5F6CLHl2l70.es.json  (+307 more)
logger-worker/: README.md  package.json  schema.sql  wrangler.toml
old/: .env.template  Home.py  install_optional.bat  requirements-core.txt  requirements.txt  telegram_bot.py  test_bot_setup.py
pages/: 1_Search_Episodes.py  3_Random_Videos.py  4_Info.py
scripts/: build_site_data.py  build_spike_comparison.py  convert_transcripts.py  download_audio.py  download_video.py  fetch_transcripts.py  fetch_youtube_metadata.py  fetch_youtube_metadata_api.py  gemini_stt_spike.py
web/: next-types-shim.d.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
(+391 files in other folders)
