[project]
name = "kargin"
version = "0.0.1"
description = "Kargin sketch search and discovery."
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2026.02.21",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.73.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]   # the build pipeline tests; ignore the frozen old/ Streamlit app
# Default norecursedirs includes "build", which would skip tests/build/. Override it
# (keep ignoring old/ and the usual noise) so the pipeline tests are actually collected.
norecursedirs = ["old", ".*", "node_modules", ".venv", "dist", "*.egg"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
